--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "express": "^4.9.5"
   },
   "devDependencies": {
+    "chai": "^1.9.2",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-jshint": "^0.10.0"
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-mocha-test": "^0.12.1",
+    "grunt-shell": "^1.1.1",
+    "mocha": "^1.21.4",
+    "supertest": "^0.14.0"
   }
 }
