--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-express-server": "^0.4.19",
     "grunt-mocha-test": "^0.12.1",
     "grunt-shell": "^1.1.1",
     "mocha": "^1.21.4",
