--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/jfathman/node-api-exp-02"
   },
+  "scripts": {
+    "test": "node_modules/.bin/grunt test"
+  },
   "engines": {
     "node": "v0.10.32"
   },
